Aggiunta seconda immagine con hover

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ img{
   margin-top: 10px;
   width: 30px;
   padding: 0 5px 5px 5px;
-  /* text-align: center; */
 }
 
 .sconto-sostenibile{
@@ -67,4 +66,18 @@ img{
 
 .prezzo{
     font-size: 8px;
+}
+
+.immagine-sotto{
+    opacity: 0;
+    position: absolute;
+}
+
+.rettangolo:hover .immagine-sotto{
+    opacity: 1;
+    position: absolute;
+}
+
+.rettangolo:hover .immagine-sopra{
+    opacity: 0;
 }
