Aggiunta di tutte le icone principali e indentazione

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@
 .contenitore{
     width: 700px;
     margin: auto;
-    /* border: 1px solid black; */
+}
 
+.contenitore-secondario{
+    display: inline-block;
 }
 
 .rettangolo{
