--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 .contenitore-secondario{
     display: inline-block;
+    margin-top: 20px;
 }
 
 .rettangolo{
@@ -41,7 +42,7 @@ img{
 
 .targa{
     color: white;
-    font-size: 10px;
+    font-size: 8px;
     padding: 2px;
     display: inline-block; 
 }
