--- a/css/style.css
+++ b/css/style.css
@@ -72,15 +72,15 @@ img{
 }
 
 .immagine-sotto{
-    opacity: 0;
+    display: none;
     position: absolute;
 }
 
 .rettangolo:hover .immagine-sotto{
-    opacity: 1;
+    display: block;
     position: absolute;
 }
 
 .rettangolo:hover .immagine-sopra{
-    opacity: 0;
+    display: block;
 }
